--------------------------------------------------------------------------------------------------
Release notes version 1.9.4_beta : Enhancements, modifications and corrected bugs since version 1.9.3 :
--------------------------------------------------------------------------------------------------
26/02/24 (TRUST) New feature  : Fallback to coarse solver if the IJK-multigrid has not reached convergence during current timestep (this concerns IJK discretization only)
05/02/24 (TRUST) New feature  : New post-processing format introduced in TRUST : CGNS (CFD General Notation System). Not yet available for FT interface mesh (will be soon !)
02/02/24 (TRUST) Fix          : Fixed bug in post-processing fields on nodes (SOM) in MED Format (internal MEDCouplingUMesh was not always in sync with Domaine)
31/01/24 (TRUST) Fix          : Fixed handling of empty domains in VEF, PolyMAC_P0, and other related areas.
31/01/24 (TRUST) Fix          : Bug fix in pb_couple on the same domain with missing APPEND for fields.
31/01/24 (TRUST) Fix          : Resolved the issue in Perte_Charge_VEF with non-uniform, non-xyz viscosity.
31/01/24 (TRUST) Fix	      : Replaced deprecated Pandas append with concat in Jupyter notebooks.
31/01/24 (TRUST) New feature  : himp and Text in Terme_Puissance_Thermique_Echange_Impose can now be champ_fonc fields.
31/01/24 (TRUST) New feature  : Addition of new methods for face/element interpolation with DoubleTab in Discretization Tools.
31/01/24 (TRUST) New feature  : DP_Impose and regulated pressure loses compatible with VEF discretizations
31/01/24 (TRUST) New feature  : Champ_Fonc_Interp can be used now with OverlapDEC (for parallel cases)
31/01/24 (TRUST) Portability  : Lots of portability stuff for mac: extension .so => dylib, linker, NB_PHYSICAL_CORES, awk ...
11/01/24 (TRUST) Change       : OpenBLAS version updated to 0.3.25, this may result into some numerical differences in tests using this library