@@ -84,12 +84,17 @@ then
    [ "`grep 'Fedora release 3[6-8]' /etc/fedora-release 2>/dev/null`" != "" ] 	&& os=fedora31 && version=3_2_1
    [ `uname -s` = Darwin ]                                                      && os=arm64 && version=3_3_1
 
-   version_visit=v`echo $version | $TRUST_Awk '{gsub("_",".",$1);print $1}'`
    # A partir de 1.8.4, on essaie de prendre sur PC+MPICH le binaire precompile avec MPICH:   
    if [ "$TRUST_WITHOUT_HOST" = 1 ] || [ "${HOST#cea-dm2s}" != "$HOST" ]
    then
       [ "$os" != "" ] && [ ${MPI_ROOT%/mpich} != $MPI_ROOT ] && TRUST_DOWNLOAD_VISIT=1
    fi
+   
+   # in the case where we do not download visit, build VisIt 3.3.3 sources since avail in externalpackages
+   [ "$TRUST_DOWNLOAD_VISIT" != "1" ] && version=3_3_3
+   
+   version_visit=v`echo $version | $TRUST_Awk '{gsub("_",".",$1);print $1}'`
+   
 else
    # Ancienne procedure, peu a peu obsolete
    build=build.sh
