@@ -2,7 +2,7 @@ arch	maj		recup	hostname		Update	lance_test	baltiks						Tasks		Options
 linux	rsync_ssh	tache	altair-valgrind.intra.cea.fr    -limited  	-FLICA5 		 		    -ctest_valgrind 	-force_provided_mpich -without-pdflatex -gcc8			# CentOS 7.9 serveur rackable pour TRUST titania
 linux	rsync_ssh	tache	pegasi6-mv-install.intra.cea.fr		-all		  	 	-force_provided_mpich  -move-install -disable-valgrind	 -remote_install_TRUST_kernel_only 							# Ubuntu 20	rack triocfd
 linux	rsync_ssh	tache	is245198-intel.intra.cea.fr		-all 		-TRUST -TrioCFD  -GENEPI3 -STT -PEMFC -FLICA5 -C3D -TRUST_NK  		-intel21  -disable-plot2d -force_system_mpi -disable-mpi4py 		# Ubuntu 20 titania TMA TRUST
-linux	rsync_ssh	tache	pegasi6-intel.intra.cea.fr		-all		  	 	-intel22  -disable-plot2d -force_system_mpi -disable-mpi4py						# Ubuntu 20	rack
+linux	rsync_ssh	tache	pegasi6-intel.intra.cea.fr		-all		  	 	-intel22  -disable-plot2d -force_system_mpi -disable-mpi4py -without-visit 						# Ubuntu 20	rack
 linux	rsync_ssh	tache	is234617-intel.intra.cea.fr	-all 		-TRUST -TrioCFD  -GENEPI3 -STT -PEMFC -FLICA5 -C3D -TRUST_NK  		-intel23  -disable-plot2d -force_system_mpi -disable-mpi4py 		# Ubuntu 22 TMA TRUST 
 linux   rsync_ssh	non	is212958-intel.intra.cea.fr 	-all		-TrioCFD -C3D  -FLICA5   					     		-intel19 -disable-plot2d  -force_system_mpi -disable-mpi4py -disable-gmsh   						# CentOS 7.9	Bat 451	LMSF	Bureau Michel (machine pilote titania)
 linux   rsync_ssh	non	pegasi5-intel-build64.intra.cea.fr 	-all		-TrioCFD    			-intel19 -build_64_bit -disable-plot2d  -without-pdflatex -force_system_mpi -disable-mpi4py -without-visit  						# CentOS 7.9 
@@ -14,7 +14,7 @@ linux	rsync_ssh	cible	is242981.intra.cea.fr	-all 		 					-semi_opt 								# Fed
 linux	rsync_ssh	tache	is241762-clang.intra.cea.fr			-TrioCFD -GENEPI3 -C3D                				-clang -force_provided_openmpi -without-pdflatex  					# Fedora 34	Bat 451 LMSF titania 
 linux	rsync_ssh	tache	is234634-clang.intra.cea.fr	-all 		-TrioCFD -FLICA5   					-clang 		-force_provided_openmpi -without-pdflatex -without-visit   								# Fedora 36	Bat 451 LGLS titania bureau TMA TRUST
 linux   rsync_ssh       tache   is157083-clang.intra.cea.fr 		-all	   -TrioCFD	 		   		-clang  	 -force_latest_mpich -without-pdflatex  					# Fedora 38 GF 
-linux   rsync_ssh       tache   is245205-clang.intra.cea.fr 		-all	   -TrioCFD	 		   		-clang  	 -force_latest_mpich -without-pdflatex  					# Fedora 39 GA 
+linux   rsync_ssh       tache   is245205-clang.intra.cea.fr 		-all	   -TrioCFD	 		   		-clang  	 -force_latest_mpich -without-pdflatex -without-visit   					# Fedora 39 GA 
 linux	rsync_ssh	tache	is234634.intra.cea.fr	-all 		-FLICA5   					 -without-pdflatex  							# Fedora 36	Bat 451 LGLS bureau TMA TRUST
 linux	rsync_ssh	tache	is157083.intra.cea.fr	-all 		-FLICA5 -TrioCFD -GENEPI3 -STT -PEMFC -C3D -SIDES -SCORPIO   					 -without-pdflatex    							# Fedora 38 	Bat 454 LMEC titania  GF
 linux	rsync_ssh	tache	is247255.intra.cea.fr	-all 		-FLICA5 -TrioCFD -GENEPI3 -STT -PEMFC -C3D -SIDES -SCORPIO   					 -without-pdflatex    							# Ubuntu 22 	Bat 451 LMSF titania  MF
@@ -22,15 +22,15 @@ linux	rsync_ssh	cible	is227246.intra.cea.fr		-all     	-MPCube -TrioCFD  -GENEPI
 linux	rsync_ssh	tache	altair-nvidia.intra.cea.fr	-all		-TrioCFD				-gcc8 -cuda=download -without-pdflatex -without-visit
 linux	rsync_ssh	tache	irene-ccrt.ccc.cea.fr		-limited	-TrioCFD					-semi_opt -benchmark	-without-doc -disable-plot2d -without-conda -disable-hwloc  									# RedHat 7.6	CEA CCRT
 linux	rsync_ssh  	tache	irene-ccrt-build64.ccc.cea.fr	-limited	-TrioCFD 						-build_64_bit -without-doc -disable-plot2d -without-conda -disable-hwloc  						# RedHat 7.6	CEA CCRT
-linux	rsync_ssh 	tache	irene-amd-ccrt.ccc.cea.fr	-limited	-TrioCFD 					-benchmark	-without-doc -disable-plot2d -without-conda -disable-hwloc  									# RedHat 7.6	CEA CCRT
-linux	rsync_ssh 	tache	irene-amd-ccrt-build64.ccc.cea.fr	-limited	-TrioCFD 					-benchmark	-build_64_bit -without-doc -disable-plot2d -without-conda -disable-hwloc     									# RedHat 8.4	CEA CCRT
+linux	rsync_ssh 	tache	irene-amd-ccrt.ccc.cea.fr	-limited	-TrioCFD 					-benchmark	-without-doc -disable-plot2d -without-conda -disable-hwloc -without-visit   									# RedHat 7.6	CEA CCRT
+linux	rsync_ssh 	tache	irene-amd-ccrt-build64.ccc.cea.fr	-limited	-TrioCFD 					-benchmark	-build_64_bit -without-doc -disable-plot2d -without-conda -disable-hwloc -without-visit     									# RedHat 8.4	CEA CCRT
 linux	rsync_ssh 	tache	irene-amd-ccrt-gpu.ccc.cea.fr	-limited 		-TrioCFD  				-cuda 	-openmp -build_64_bit -without-doc -disable-plot2d -without-conda -disable-hwloc  									# RedHat 7.6	CEA CCRT
 linux	rsync_ssh 	tache	topaze-build64.ccc.cea.fr		-limited	-TrioCFD  				-benchmark	-without-doc -disable-plot2d -build_64_bit -without-conda -disable-hwloc   									# RedHat 8.3	CEA CCRT
 linux	rsync_ssh 	tache	topaze-gpu.ccc.cea.fr		-limited 		  				-cuda  	-openmp -build_64_bit -without-doc -disable-plot2d -without-visit -disable-mpi4py -without-conda -disable-hwloc   									# RedHat 8.3	CEA CCRT
 linux	rsync_ssh	tache	jean-zay.idris.fr   		-limited	-TrioCFD            						-benchmark -without-doc -disable-plot2d -without-visit -disable-hwloc                					# RedHat 8.1
 linux	rsync_ssh	tache	jean-zay-gpu.idris.fr   	-limited 		-TrioCFD          			-cuda  		-without-doc -disable-plot2d -without-visit -disable-hwloc                					# RedHat 8.1
 linux	rsync_ssh	tache	jean-zay-build64.idris.fr   -limited	-TrioCFD           		 		-build_64_bit -without-doc -disable-plot2d -without-visit -disable-hwloc                					# RedHat 8.1
-linux	ssh_pass 	tache	adastra.cines.fr		-limited		-TrioCFD							-build_64_bit -without-pdflatex -disable-hwloc 
+linux	ssh_pass 	tache	adastra.cines.fr		-limited		-TrioCFD							-build_64_bit -without-pdflatex -disable-hwloc  -without-conda  
 linux	ssh_pass 	tache	adastra-gpu.cines.fr		-limited		-TrioCFD					-rocm   -openmp -build_64_bit -without-pdflatex -disable-hwloc 
 linux	rsync_ssh	tache	desactive_orcus-amd-gpu.intra.cea.fr			-TrioCFD   			-cuda  				-disable-hwloc 							# CentOS 7.6	CEA Saclay
 linux	rsync_ssh	tache	orcus-intel.intra.cea.fr	-limited	-TrioCFD  -STT -PEMFC -FLICA5    				 -disable-plot2d -disable-hwloc  		-benchmark 								# CentOS 7.6	CEA Saclay
@@ -69,7 +69,6 @@ linux   rsync_ssh   tache   is233822.intra.cea.fr 			  					            -Semi_op
 linux   rsync_ssh	non	is232973.intra.cea.fr 		-all		-TrioCFD  -GENEPI3 -STT -PEMFC      	 	-gcov	-force_provided_mpich -without-pdflatex 								# Ubuntu 20.04	Bat 451	LMSF	Bureau TMA TRUST titania
 linux   rsync_ssh	non	is232973-gui.intra.cea.fr 		-all		-TrioCFD  -GENEPI3        -gui   	 		-remote_install_TRUST_with_source -force_provided_mpich -without-pdflatex  								# Ubuntu 20.04	Bat 451	LMSF	Bureau TMA TRUST
 linux   rsync_ssh	tache	petra.intra.cea.fr 		-all		   	 		 -cuda=download -openmp -without-pdflatex  								# Ubuntu 20.04 serveur rackable titania
-linux   rsync_ssh	tache	is247255-gpu.intra.cea.fr 		-all		   	 		 -cuda=download -openmp -without-pdflatex -gcc10 -force_latest_mpich  								# Ubuntu 20.04 serveur rackable titania
 linux   rsync_ssh	tache	bug_rocalution_is246524.intra.cea.fr 		-all		   	 		     -rocm -openmp -without-pdflatex    								# Ubuntu 20.04 titania avec carte GPU AMD (bureau PL)
 linux   rsync_ssh	tache	is210376-tmpnoexe.intra.cea.fr 		-all	   	 		   								# Fedora 34 titania tmp no exec
 linux   rsync_ssh	tache	is210376-noconda.intra.cea.fr 		-all	  -C3D  	 		   		-without-conda						# Fedora 34 tmp no exec, sans conda
