@@ -17,10 +17,13 @@ define_modules_config()
       # Compilateur crayCC
       module="craype-x86-trento craype-network-ofi PrgEnv-cray rocm craype-accel-amd-gfx90a libfabric gcc-mixed/11.2.0"
       #module=$module" cce/15.0.1" # 16.0.0 has an issue with crayftn (ToDo contact support)
-      module=$module" cce/17.0.0" # 16.0.0 has an issue with crayftn (ToDo contact support)
+      module=$module" cce/17.0.0" # 15.0.1 has an issue since upgrade of Jan 2024 
    else
       # Compilateur GNU
-      module="craype-x86-trento craype-network-ofi PrgEnv-cray libfabric gcc/10.3.0"   
+      #module="craype-x86-trento craype-network-ofi PrgEnv-cray libfabric gcc/10.3.0" used for first 1.9.3 install
+      # use swig module, but it needs develop GCC-CPU-3.1.0, which load gcc-native/12.1
+      # gcc-native/12.1 is replaced by cce/17.0.0 when loading PrgEnv-cray, so we reload gcc-native/12.1 again   
+       module="develop GCC-CPU-3.1.0 swig/4.1.1-fortran craype-x86-trento craype-network-ofi PrgEnv-cray libfabric gcc/10.3.0 cray-python/3.10.10 cmake/3.27.7-python3"
    fi   
    #
    echo "# Module $module detected and loaded on $HOST."
